[[example]]
name = 'circles'

[[example]]
name = 'text'

[[example]]
name = 'tiled'

[[example]]
name = 'window'
required-features = ['piston_window_texture']

[dependencies]
bit-vec = '0.6.1'
image = '0.22.1'
piston2d-graphics = { version = '0.33.0', features = ['glyph_cache_rusttype'] }
piston-texture = "*"
png = '0.15.0'
rayon = '1.1.0'

[dependencies.piston_window]
optional = true
version = '0.102.0'

[features]
default = []
piston_window_texture = ['piston_window']

[package]
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
categories = [
    'multimedia',
    'multimedia::images',
    'rendering',
]
description = '''A buffer which can be used as a render target for Piston's graphics library. This buffer can be loaded from and/or saved to a file on disk. This allows for things like screenshots in games.'''
documentation = 'https://docs.rs/graphics_buffer/'
edition = '2018'
keywords = [
    'piston',
    'image',
    'rendering',
    'graphics',
]
license = 'MIT'
name = 'graphics_buffer'
readme = 'readme.md'
repository = 'https://github.com/kaikalii/graphics_buffer'
version = '0.6.0'
